[gd_scene load_steps=5 format=3 uid="uid://sa2p8h1xwn06"]

[ext_resource type="Script" uid="uid://cf6dfix41joyp" path="res://scenes/TestReplay.gd" id="1_eb18a"]
[ext_resource type="PackedScene" uid="uid://dxc8sjiye2j58" path="res://scenes/Player.tscn" id="1_hpeaq"]
[ext_resource type="Script" uid="uid://txvmqxt1id5y" path="res://scripts/ReplayManager.gd" id="2_eb18a"]
[ext_resource type="Script" uid="uid://b4rm7f12ja1xo" path="res://scenes/ui.gd" id="4_13lyd"]

[node name="GameWorld" type="Node2D"]
script = ExtResource("1_eb18a")

[node name="Player1" parent="." instance=ExtResource("1_hpeaq")]

[node name="Player2" parent="." instance=ExtResource("1_hpeaq")]

[node name="ReplayManager" type="Node" parent="."]
script = ExtResource("2_eb18a")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_13lyd")

[node name="Info" type="VBoxContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="FrameCounter" type="Label" parent="UI/Info"]
layout_mode = 2

[node name="Player1Health" type="Label" parent="UI/Info"]
layout_mode = 2

[node name="Player2Health" type="Label" parent="UI/Info"]
layout_mode = 2

[node name="P1StateLabel" type="Label" parent="UI/Info"]
layout_mode = 2

[node name="P2StateLabel" type="Label" parent="UI/Info"]
layout_mode = 2
